Fixed overflows and button and link coloring

--- a/css/site.css
+++ b/css/site.css
@@ -47,7 +47,7 @@ img {
   max-width: 100%;
 }
 
-.my-content>*{
+.my-content>* {
   max-width: 1320px;
   margin-left: auto;
   margin-right: auto;
@@ -63,7 +63,7 @@ img {
   padding-right: 1rem;
 }
 
-.my-content>ul{
+.my-content>ul {
   padding-left: 2rem;
 }
 
@@ -101,6 +101,10 @@ img {
   padding-right: 0;
 }
 
+.dropdown-menu {
+  --bs-dropdown-link-active-bg: var(--bs-cyan);
+}
+
 .btn {
   --bs-btn-padding-x: 0.8rem;
   --bs-btn-padding-y: 0.7rem;
@@ -109,16 +113,23 @@ img {
   --bs-btn-border-width: 2px;
 }
 
+a.btn:focus {
+  text-decoration: underline;
+}
+
 .btn-primary {
   --bs-btn-bg: var(--bs-primary);
+  --bs-btn-hover-bg: var(--bs-white);
+  --bs-btn-hover-color: var(--bs-primary);
+  --bs-btn-hover-border-color: var(--bs-primary);
+  --bs-btn-active-bg: var(--bs-white);
+  --bs-btn-active-color: var(--bs-primary);
+  --bs-btn-active-border-color: var(--bs-primary);
 }
 
 .btn-outline-primary {
   --bs-btn-bg: var(--bs-white);
   --bs-btn-color: var(--bs-primary);
-}
-
-.btn-primary, .btn-outline-primary {
   --bs-btn-hover-bg: var(--bs-white);
   --bs-btn-hover-color: var(--bs-primary);
   --bs-btn-hover-border-color: var(--bs-primary);
@@ -133,7 +144,6 @@ img {
   margin: 2rem auto;
   padding: 1rem;
   border-radius: 0.375rem;
-  background: #d5e4f5;
   background: var(--bs-light-blue);
   text-align: center;
 }
